--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,10 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  adapter: psql
+  database: social_network
+  username: social_network
+  password: <%= ENV['SOCIAL_NETWORK_DATABASE_PASSSOCIAL_NETWORK']
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
